--- a/style.css
+++ b/style.css
@@ -3,13 +3,16 @@ body{
     padding: 0;
     font-family: 'Courier New', Courier, monospace;
     text-align: center;
-    letter-spacing: .5em;
+    letter-spacing: .3em;
     background: linear-gradient(to left, #2B5261,#7E436C);
     color: rgb(211, 211, 211);
+    
+}
+main{
     display: grid;
-    /* justify-content: center; */
     align-content: center;
-    height: 900px;
+    height: 800px;
+    padding: 10px;
 }
 h1{
     font-size: 50px;
