--- a/style.css
+++ b/style.css
@@ -18,3 +18,12 @@ h1{
     font-size: 50px;
     text-transform: uppercase;
 }
+
+@media screen and (max-width: 768px) {
+    h1{
+        font-size: 30px;
+    }
+    main{
+        height: 400px;
+    }
+}
